# py-solana-pay

./: .env.example  .gitignore  FASTUI-MIGRATION.md  IMPLEMENTATION-SUMMARY.md  README-BACKEND.md  README-FRONTEND.md  README.md  main.py  pre-commit-autofix.yml  pyproject.toml  ruff.toml  solana_pay.db
.github/workflows/: copilot-setup-steps.yml
examples/: usage_example.py
resources/: README.md  application.properties  config.py
resources/templates/: about.html  account.html  cancel.html  cart.html  forget.html  index.html  login.html  product.html  register.html  shop-single.html  success.html
resources/templates.thymeleaf/: base.html
src/multi_trip_cloud/: __init__.py
src/py_solana_pay/: __init__.py  __main__.py  cli.py  database.py  logging_config.py  main.py  solana_integration.py
src/py_solana_pay/models/: __init__.py  account.py  authorities.py  bank_account.py  comment.py  product.py  reply.py  role.py  transaction.py
src/py_solana_pay/routers/: accounts.py  auth.py  checkout.py  fastui_pages.py  products.py  transactions.py
src/py_solana_pay/schemas/: __init__.py  account.py  payment.py
static/css/: login.css  style.css
static/images/: anh1.txt  anh2.txt
static/js/: main.js
templates/: base.html  index.html  login.html  register.html
