[project]
name = "py-solana-pay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lzhen.dev", email = "lzhen.dev@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rootutils>=1.0.7",
]

# [project.scripts]
# py-solana-pay = "multi_trip_cloud:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true
